Added pie/doughnut charts and data

--- a/src/app/charts/pie-chart/pie-chart.component.html
+++ b/src/app/charts/pie-chart/pie-chart.component.html
@@ -1,1 +1,8 @@
-<p>pie-chart works!</p>
+<div class="">
+    <canvas baseChart
+        [data] = "pieChartData"
+        [colors] = "pieChartColors"
+        [labels] = "pieChartLabels"
+        [chartType] = "pieChartType" >
+    </canvas>
+</div>
