--- a/src/app/sections/section-sales/section-sales.component.html
+++ b/src/app/sections/section-sales/section-sales.component.html
@@ -1,11 +1,10 @@
 <div class="section-container">
     <div class="cards">
         <div class="card-deck">
+            <!-- Bar Chart -->
             <div class="card mb-3 shadow card-theme">
                 <div class="card-header card-header-theme">
-                    <h5>
-                        Daily Orders
-                    </h5>
+                    <h5>Daily Orders</h5>
                 </div>
                 <div class="card-body">
                     <app-bar-chart>
@@ -13,6 +12,29 @@
                     </app-bar-chart>
                 </div>
             </div>
+            <!-- Pie Chart -->
+            <div class="card mb-3 shadow card-theme">
+                <div class="card-header card-header-theme">
+                    <h5>Orders By Customer</h5>
+                </div>
+                <div class="card-body">
+                    <app-pie-chart>
+                        
+                    </app-pie-chart>
+                </div>
+            </div>
+            <!-- Pie Chart -->
+            <div class="card mb-3 shadow card-theme">
+                <div class="card-header card-header-theme">
+                    <h5>Orders By State</h5>
+                </div>
+                <div class="card-body">
+                    <app-pie-chart>
+                        
+                    </app-pie-chart>
+                </div>
+            </div>
+            
         </div>
     </div>
-</div>>
+</div>
