--- a/src/styles.less
+++ b/src/styles.less
@@ -34,7 +34,7 @@ a:hover {
 
 .card-theme {
     background-color: #191f26;
-    border: none;
+    border: 1px solid #223;
     border-radius: 2px;
 }
  
@@ -46,7 +46,7 @@ a:hover {
 }
 
 .card-body {
-    background-color: #494f56;
+    background-color: #1f2126;
 }
 
 .cards {
