--- a/src/app/charts/bar-chart/bar-chart.component.html
+++ b/src/app/charts/bar-chart/bar-chart.component.html
@@ -1,11 +1,9 @@
 <div class="chart">
     <canvas baseChart
-    [datasets]="barChartData"
-    [options]="barChartOptions"
-    [labels]="barChartLabels"
-    [legend]="barChartLegend"
-    [chartType]="barChartType"
-    >
-</canvas>
-        
+        [datasets]="barChartData"
+        [options]="barChartOptions"
+        [labels]="barChartLabels"
+        [legend]="barChartLegend"
+        [chartType]="barChartType">
+    </canvas>
 </div>
