--- a/src/app/sections/section-sales/section-sales.component.html
+++ b/src/app/sections/section-sales/section-sales.component.html
@@ -1,15 +1,15 @@
 <div class="section-container">
-    <div class="cards">
+
+    <div class="row-fluid cards">
         <div class="card-deck">
+
             <!-- Bar Chart -->
             <div class="card mb-3 shadow card-theme">
                 <div class="card-header card-header-theme">
                     <h5>Daily Orders</h5>
                 </div>
                 <div class="card-body">
-                    <app-bar-chart>
-                        
-                    </app-bar-chart>
+                    <app-bar-chart></app-bar-chart>
                 </div>
             </div>
             <!-- Pie Chart -->
@@ -18,9 +18,7 @@
                     <h5>Orders By Customer</h5>
                 </div>
                 <div class="card-body">
-                    <app-pie-chart>
-                        
-                    </app-pie-chart>
+                    <app-pie-chart></app-pie-chart>
                 </div>
             </div>
             <!-- Pie Chart -->
@@ -29,12 +27,24 @@
                     <h5>Orders By State</h5>
                 </div>
                 <div class="card-body">
-                    <app-pie-chart>
-                        
-                    </app-pie-chart>
+                    <app-pie-chart></app-pie-chart>
                 </div>
             </div>
             
         </div>
     </div>
+
+    <div class="row-fluid cards">
+        <div class="card shadow card-theme bottom-card">
+            <div class="card-header card-header-theme">
+                <h5>Monthly Sales By Product</h5>
+            </div>
+            <div class="card-body">
+                <app-line-chart></app-line-chart>
+            </div>
+
+        </div>
+    </div>
+
 </div>
+<br/><br/><br/>
